# Saas-Bot-System

./: README.md  pyproject.toml
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/core/core/: security.py
backend/app/models/: account.py  task.py  user.py
backend/app/services/services/: account_service.py
backend/bots/: web_bot.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.js  app.jsx
frontend/src/components/: layout.jsx  statusbadge.jsx
frontend/src/pages/: accounts.jsx  dashboard.jsx  login.jsx  register.jsx  taskdetail.jsx  tasks.jsx
