[project]
name = "saas-bot-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypi>=2.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.42.0",
]